<resources>
    <string name="app_name">AntiqueMall</string>
    <string name="feel_the_history">Buy the History</string>
    <string name="app_logo">app_logo</string>
    <string name="antique_mall">Antique Mall</string>
    <string name="continue_without_sign_in">Continue Without Sign in</string>
    <string name="warning">Warning</string>
    <string name="remember_sign_in_messeage">Please sign in. If you do not sign in, you do not use effectively the app. Do you want to continue anyway?</string>
    <string name="okey">Okey</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connection_error">Check Network Connection</string>
    <string name="general_error">Something Went Wrong</string>
    <string name="home_page">Home Page</string>
    <string name="profile">Profile</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_icon">favorites icon</string>
    <string name="exit_icon">exit icon</string>
    <string name="exit">Exit</string>
    <string name="product_image">Product Image</string>
    <string name="products">Products</string>
    <string name="no_favorite_products">You do not have any favorite products yet.</string>
    <string name="get_contact">Get Contact</string>
    <string name="info">INFO</string>
    <string name="location">LOCATION</string>
    <string name="product_features">Product Features</string>
    <string name="dimensions"><![CDATA[<b>Dimensions</b> : %1s]]></string>
    <string name="status"><![CDATA[<b>Status</b> : %1s]]></string>
    <string name="color"><![CDATA[<b>Color</b> : %1s]]></string>
    <string name="material"><![CDATA[<b>Material</b> : %1s]]></string>
    <string name="price"><![CDATA[<b>Price</b> : %1s%2s]]></string>
    <string name="seller"><![CDATA[<b>Seller</b> : %1s]]></string>
    <string name="add_favorites">Add Favorites</string>
    <string name="remove_favorites">Remove Favorites</string>
    <string name="added_favorites">Added Favorites</string>
    <string name="removed_favorites">Removed Favorites</string>
    <string name="mark_dollar">$</string>
    <string name="seller_location">Seller Location</string>
    <string name="guess_user_call_error">Please sign in to make call.</string>
    <string name="call_permission_message">You have to give permission to make call.</string>


</resources>