<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue_light"
    tools:context=".ui.signin.SignInFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/ic_antique_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/aclonica"
        android:text="@string/antique_mall"
        android:textColor="@color/white"
        android:textSize="@dimen/xxLarge_text_size"
        app:layout_constraintEnd_toEndOf="@+id/ivLogo"
        app:layout_constraintStart_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
        android:id="@+id/btnSignInWithHuawei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinueWithoutSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:backgroundTint="@color/red_huawei"
        android:text="@string/continue_without_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignInWithHuawei"
        app:layout_constraintStart_toStartOf="@+id/btnSignInWithHuawei"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInWithHuawei" />

</androidx.constraintlayout.widget.ConstraintLayout>